# mcmc_infinity

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: getting_started.ipynb  rastrigrin_demo.ipynb  rosenbrock_demo.ipynb  rosenbrock_demo_emcee_samples.txt
logo_images/: README.md
mcmc_infinity/: __init__.py
mcmc_infinity/code/: gaussian_proposal.py  kde_proposal.py  mixture_proposal.py  normalizing_flow_proposal.py  sampler.py  symmetric_gaussian_proposal.py  uniform_proposal.py  uniform_proposal_transd.py  utils.py
mcmc_infinity/code/proposals/: gaussian_proposal.py  kde_proposal.py  mixture_proposal.py  normalizing_flow_proposal.py  uniform_proposal.py
mcmc_infinity/examples/: getting_started.ipynb  nf_demo_rosenbrock.ipynb  pulses_demo.ipynb  rastrigrin_demo.ipynb  rosenbrock_demo.ipynb
mcmc_infinity/test_functions/: gaussian.py  gaussian_shells.py  multiple_pulses.py  rastrigin.py  rosenbrock.py
mcmc_infinity/tests/: test_proposals.py
tests/: test_utils.py
